# fibserv

./: CMakeLists.txt
libs/: helpers.c  helpers.h  macros.h  structs.h
src/: main.c
